--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ajax_blog",
   "version": "1.0.0",
   "description": "A blog project combining front- and back-end development tools and libraries",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js"
@@ -10,7 +10,6 @@
   "author": "Lena Venable",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.17.0",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "morgan": "^1.9.0"
